--- a/arch/arm/configs/pxa1088_degaswifi_eur_defconfig
+++ b/arch/arm/configs/pxa1088_degaswifi_eur_defconfig
@@ -237,10 +237,14 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_SIO is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
