--- a/arch/arm/configs/pxa1088_degaswifi_eur_defconfig
+++ b/arch/arm/configs/pxa1088_degaswifi_eur_defconfig
@@ -509,6 +509,7 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
 #
