--- a/arch/arm/configs/pxa1088_degaswifi_eur_defconfig
+++ b/arch/arm/configs/pxa1088_degaswifi_eur_defconfig
@@ -3782,6 +3782,12 @@ CONFIG_CRYPTO_HW=y
 CONFIG_BINARY_PRINTF=y
 
 #
+# S2W
+#
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+#CONFIG_TOUCHSCREEN_PREVENT_SLEEP=y
+
+#
 # Library routines
 #
 CONFIG_BITREVERSE=y
