--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -967,4 +967,16 @@ config TOUCHSCREEN_MMS134S
 	help
 		Say Y here if you have a MELFAS MMS134S touchscreen.
 		If unsure, say N.
+
+config TOUCHSCREEN_SWEEP2WAKE
+        tristate "Sweep2Wake for touchscreens"
+        select TOUCHSCREEN_PREVENT_SLEEP
+        default n
+
+config TOUCHSCREEN_PREVENT_SLEEP
+        bool "Inihibit sleep on modified touchscreen drivers"
+        default n
+        help
+          This disables the sleep function of modified touchscreen drivers.
+
 endif
